--- a/templates/main.html
+++ b/templates/main.html
@@ -1,3 +1,3 @@
-<input type="text" ng-model="name"></input>
+<h3>About me</h3>
 
-{{ name }}
+My passions are working out and new technology. I am honest and reliable. I learn very quickly and I love doing so. I would also say that I am organized and I tidy.
