--- a/templates/main.html
+++ b/templates/main.html
@@ -1,3 +1,3 @@
-<h3>About me</h3>
+<h3 class="box-header">About me</h3>
 
-My passions are working out and new technology. I am honest and reliable. I learn very quickly and I love doing so. I would also say that I am organized and I tidy.
+<p>My passions are music, working out and new technology. I am honest and reliable. I learn very quickly and I love doing so, I am also very tidy and organized.</p>
