--- a/templates/cv.html
+++ b/templates/cv.html
@@ -70,6 +70,6 @@
     </div>
 </dl>
 
-<h3 class="box-header">About me</h3>
+<h3 class="box-header">Miscellaneous</h3>
 
-<p>My passions are music, working out and new technology. I am honest and reliable. I learn very quickly and I love doing so, I am also very tidy and organized.</p>
+<p>{{ misc }}</p>
