--- a/templates/cv.html
+++ b/templates/cv.html
@@ -2,7 +2,7 @@
     <h1>EGILL SVEINBJÖRNSSON</h1>
     
     <p>(354) &#9642; 616 &#9642; 8622 &#9671; <a href="mailto:egilsster@gmail.com">egilsster@gmail.com</a></p>
-    <p>SSID: 061291 &#9642; 3189</p>
+    <p>SSN: 061291 &#9642; 3189</p>
     <p>Fljótasel 4 &#9671; 109 Reykjavík, Iceland</p>
 </center>
 
