--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,185 @@
-@font-face {
-    font-family: "Computer Modern";
-    src: url('fonts/cm-unicode-0.6.3a/cmunss.otf');
+* {
+    box-sizing: border-box;
 }
-@font-face {
-    font-family: "Computer Modern";
-    src: url('fonts/cm-unicode-0.6.3a/cmunsx.otf');
-    font-weight: bold;
-}
-@font-face {
-    font-family: "Computer Modern";
-    src: url('fonts/cm-unicode-0.6.3a/cmunsi.otf');
-    font-style: italic;
-}
-@font-face {
-    font-family: "Computer Modern";
-    src: url('fonts/cm-unicode-0.6.3a/cmunbxo.otf');
-    font-weight: bold;
-    font-style: italic;
-}
-
 body {
-    font-family: "Computer Modern", sans-serif;
-    margin-right: 50px;
-    margin-left: 50px;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    font-kerning: normal;
+    margin: 0;
+    font-family: "Apercu Regular", Calibri, sans-serif;
+    font-size-adjust: 0.508;
 }
-
+ul {
+    list-style: none;
+    margin: 0;
+}
+img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+a {
+    text-decoration: none;
+}
+h1 a {
+    color: #95A5A6;
+    border-bottom: 2px solid #95A5A6;
+    transition: all 0.2s;
+}
+h1 a:hover {
+    color: #F07B69;
+    border-bottom: 2px solid #F07B69;
+}
 footer {
     margin-bottom: 50px;
     padding-top: 25px;
-    border-top: 1px solid lightgray;
     text-align: center;
 }
-
+.section-heading {
+    text-align: center;
+    margin: 0 auto;
+    color: #95A5A6;
+    font-size: 26px;
+    padding: 50px;
+    font-weight: normal;
+}
+.cv {
+    color: #7F8C8D;
+}
+.cv-group {
+    margin: 0 auto;
+    max-width: 700px;
+}
+.cv-category {
+    text-decoration: underline;
+    margin-bottom: 25px;
+}
+.cv-item {
+    position: relative;
+    max-width: 700px;
+    margin: 0 auto;
+    border-bottom: 1px solid #ECF0F1;
+    margin-bottom: 30px;
+    padding: 0 0px 20px;
+}
+.cv-item header {
+    min-height: 60px;
+    padding-left: 95px;
+    text-align: center;
+}
+.cv-item img {
+    position: absolute;
+    top: 0;
+    left: 0px;
+    width: 60px;
+}
+.cv-item h1 {
+    font-family: "Apercu Bold", Calibri, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    color: #7F8C8D;
+    display: inline;
+}
+.cv-item .description {
+    display: block;
+    color: #7F8C8D;
+    padding-left: 10px;
+    font-size: 10px;
+}
+.cv-item .duration {
+    display: block;
+    font-size: 12px;
+    color: #7F8C8D;
+}
+.cv-item .content {
+    font-size: 14px;
+    color: #7F8C8D;
+    line-height: 17px;
+    padding-top: 10px;
+}
+.cv-item .recommendation-item {
+    position: relative;
+    line-height: 26px;
+}
+.cv-item .recommendation-item::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: 100%;
+    display: block;
+    width: 6px;
+    height: 6px;
+    border: 1px solid #999;
+    border-radius: 50%;
+    margin-top: -3px;
+    margin-right: 12px;
+}
+@media screen and (min-width: 500px) {
+    .cv-item {
+        padding-right: 0;
+    }
+    .cv-item header {
+        text-align: left;
+        padding-left: 80px;
+        min-height: 0;
+    }
+    .cv-item img {
+        left: -10;
+    }
+    .cv-item .description {
+        display: inline-block;
+    }
+    .cv-item .duration {
+        float: right;
+    }
+    .cv-item .content {
+        padding-left: 80px;
+    }
+}
+.panel-title {
+    color: #95A5A6;
+}
+.panel {
+    max-width: 700px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+.site-header {
+    color: #95A5A6;
+}
+.site-title {
+    text-transform: uppercase;
+}
 dl.inline dt, dl.inline dd {
     float: left;
     margin: 0 0.5em 0 0;
 }
-
 dl.inline dd + dt, dl.inline dd + dd {
     clear: left
 }
-
 dl.inline dt {
     font-weight: bold
 }
-
-.alignleft {
-    float: left;
-}
-
-.alignright {
-    float: right;
-}
-
-.clearfloat {
-    clear: both;
-}
-
-.box-header {
-    text-transform: uppercase;
-    border-bottom: 1px solid black;
-}
-
-.recommendation-item {
-    display: list-item;
-    margin: 20px;
-}
-
 .icons {
     font-size: 35px;
 }
-
 .iconlink {
     color: black;
 }
-
 .iconlink:hover {
-    color: #555;
+    color: lightgrey;
     text-decoration: none;
+}
+.link-list {
+    padding: 0;
+}
+.link-item {
+    display: inline;
+    text-decoration: underline;
+}
+.link-item:after {
+    content: ", ";
+}
+.link-item:last-child:after {
+    content: "";
 }
