--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700);
+
 * {
     box-sizing: border-box;
 }
@@ -5,7 +7,6 @@ body {
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     font-kerning: normal;
-    margin: 0;
     font-family: "Apercu Regular", Calibri, sans-serif;
     font-size-adjust: 0.508;
 }
@@ -20,20 +21,56 @@ img {
 }
 a {
     text-decoration: none;
+	border-bottom: 1px dotted;
+	transition: 0.25s ease-out;
+	-webkit-transition: 0.25s ease-out;
+	-moz-transition: 0.25s ease-out;
+	-ms-transition: 0.25s ease-out;
+	-o-transition: 0.25s ease-out;
+    color: #656a68;
 }
-h1 a {
-    color: #95A5A6;
-    border-bottom: 2px solid #95A5A6;
-    transition: all 0.2s;
+a:hover {
+    color: #253334 !important;
+    border-bottom: 1px dotted #eb7425;
+    text-decoration: none;
 }
-h1 a:hover {
-    color: #F07B69;
-    border-bottom: 2px solid #F07B69;
+.container-fluid {
+    padding: 0;
 }
-footer {
-    margin-bottom: 50px;
-    padding-top: 25px;
-    text-align: center;
+/* Top canvas */
+.canvas {
+    border-top: 10px solid black;
+    font-family: 'Source Sans Pro', sans-serif;
+    height: 100vh;
+    background-color: #f2f4f1;
+    font-size: 16pt;
+}
+.canvascontainer {
+    margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+
+    width: 60%;
+    height: 50%;
+
+    max-width: 520px;
+}
+.bold {
+    font-weight: 700;
+}
+.normal {
+    font-weight: 400;
+}
+.light {
+    font-weight: 200;
+}
+.about p {
+    padding-bottom: 50px;
+}
+.footer, .footer a {
+    color: black;
+    font-size: 12pt;
+    text-align: right;
 }
 
 /* Selections */
@@ -153,12 +190,6 @@ footer {
     margin: 0 auto;
     margin-bottom: 20px;
 }
-.site-header {
-    color: #95A5A6;
-}
-.site-title {
-    text-transform: uppercase;
-}
 .list-description {
     font-family: "Apercu Bold", Calibri, sans-serif;
     font-weight: bold;
@@ -170,24 +201,13 @@ footer {
 }
 .link-item {
     display: inline;
-    text-decoration: underline;
-}
-.link-item:after {
-    content: ", ";
-}
-.link-item:last-child:after {
-    content: "";
 }
 
 /* Footer */
 
-.icons {
-    font-size: 35px;
-}
-.iconlink {
-    color: black;
-}
-.iconlink:hover {
-    color: lightgrey;
-    text-decoration: none;
+footer, footer a {
+
+    margin-bottom: 50px;
+    padding-top: 25px;
+
 }
