--- a/css/style.scss
+++ b/css/style.scss
@@ -1,20 +1,44 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700);
+
+/* Variables */
+
+$cv-font-regular: "Apercu Regular", Calibri, sans-serif;
+$cv-font-bold: "Apercu Bold", Calibri, sans-serif;
+
+/* Controlled using font-weight */
+$canvas-font: "Source Sans Pro", sans-serif;
+$canvas-max-width: 520px;
+
+$dark-primary-color: #455A64;
+$primary-color: #607D8B;
+$light-primary-color: #CFD8DC;
+$text-icons: #FFFFFF;
+
+$accent-color: #FF5722;
+$primary-text: #212121;
+$secondary-text: #727272;
+$divider-color: #B6B6B6;
+
 /* Styles */
+
 body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-kerning: normal;
-  font-family: "Apercu Regular", Calibri, sans-serif;
-  font-size-adjust: 0.5; }
+  font-family: $cv-font-regular;
+  font-size-adjust: 0.5;
+}
 
 ul {
   list-style: none;
-  margin: 0; }
+  margin: 0;
+}
 
 img {
   width: 100%;
   height: auto;
-  display: block; }
+  display: block;
+}
 
 a {
   text-decoration: none;
@@ -23,23 +47,30 @@ a {
   -webkit-transition: 0.25s ease-out;
   -moz-transition: 0.25s ease-out;
   -o-transition: 0.25s ease-out;
-  color: #212121; }
+  color: $primary-text;
+}
 
 a:hover {
   color: #253334 !important;
   border-bottom: 1px dotted #FF5722;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
-.cv-group a {
-  color: #727272; }
+.cv-group {
+  a {
+    color: $secondary-text;
+  }
+}
 
 /* Top canvas */
+
 .canvas {
-  border-top: 10px solid #212121;
-  font-family: "Source Sans Pro", sans-serif;
+  border-top: 10px solid $primary-text;
+  font-family: $canvas-font;
   height: 100vh;
-  background-color: #CFD8DC;
-  font-size: 16pt; }
+  background-color: $light-primary-color;
+  font-size: 16pt;
+}
 
 .canvas-container {
   margin: auto;
@@ -50,91 +81,111 @@ a:hover {
   right: 0;
   width: 60%;
   height: 50%;
-  max-width: 520px; }
+  max-width: 520px;
+}
 
 .bold {
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 .normal {
-  font-weight: 400; }
+  font-weight: 400;
+}
 
 .light {
-  font-weight: 200; }
+  font-weight: 200;
+}
 
 .about p {
-  padding-bottom: 50px; }
+  padding-bottom: 50px;
+}
 
 .footer, .footer a {
   color: black;
   font-size: 12pt;
-  text-align: right; }
+  text-align: right;
+}
 
 /* Selections */
+
 ::selection {
   color: #FFFFFF;
-  background-color: #FF5722; }
+  background-color: $accent-color;
+}
 
 /* CV */
+
 .cv > h1 {
   font-size: 40pt;
   text-align: center;
-  color: #212121;
+  color: $primary-text;
   padding: 30px;
-  font-weight: normal; }
+  font-weight: normal;
+}
 
 .cv {
-  color: #212121;
-  padding-bottom: 100px; }
+  color: $primary-text;
+  padding-bottom: 100px;
+}
 
 .cv-group {
   margin: 0 auto;
-  max-width: 700px; }
+  max-width: 700px;
+}
 
 .cv-item {
   position: relative;
   max-width: 700px;
-  border-bottom: 1px solid #B6B6B6;
+  border-bottom: 1px solid $divider-color;
   margin: 0 auto 30px;
-  padding: 0 0 20px; }
+  padding: 0 0 20px;
+}
 
 .cv-item header {
   min-height: 60px;
   padding-left: 95px;
-  text-align: center; }
+  text-align: center;
+}
 
 .cv-item img {
   position: absolute;
   top: 0;
   left: 0;
-  width: 60px; }
+  width: 60px;
+}
 
 .cv-item h1 {
-  font-family: "Apercu Bold", Calibri, sans-serif;
+  font-family: $cv-font-bold;
   font-size: 15px;
   font-weight: 700;
-  color: #212121;
-  display: inline; }
+  color: $primary-text;
+  display: inline;
+}
 
 .cv-item .description {
   display: block;
-  color: #727272;
+  color: $secondary-text;
   padding-left: 10px;
-  font-size: 10px; }
+  font-size: 10px;
+}
 
 .cv-item .duration {
   display: block;
   font-size: 12px;
-  color: #727272; }
+  color: $secondary-text;
+}
 
 .cv-item .content {
   font-size: 14px;
-  color: #727272;
+  color: $secondary-text;
   line-height: 17px;
-  padding-top: 10px; }
+  padding-top: 10px;
+}
 
 .cv-item .recommendation-item {
   position: relative;
-  line-height: 26px; }
+  line-height: 26px;
+}
 
 .cv-item .recommendation-item::before {
   content: "";
@@ -144,49 +195,60 @@ a:hover {
   display: block;
   width: 6px;
   height: 6px;
-  border: 1px solid #727272;
+  border: 1px solid $secondary-text;
   border-radius: 50%;
   margin-top: -3px;
-  margin-right: 12px; }
+  margin-right: 12px;
+}
 
 /* Extra desktop settings */
 @media screen and (min-width: 500px) {
   .cv-item {
-    padding-right: 0; }
+    padding-right: 0;
+  }
 
   .cv-item header {
     text-align: left;
     padding-left: 80px;
-    min-height: 0; }
+    min-height: 0;
+  }
 
   .cv-item .description {
-    display: inline-block; }
+    display: inline-block;
+  }
 
   .cv-item .duration {
-    float: right; }
+    float: right;
+  }
 
   .cv-item .content {
-    padding-left: 80px; } }
+    padding-left: 80px;
+  }
+}
+
 /* List items */
 .list-description {
-  font-family: "Apercu Bold", Calibri, sans-serif;
+  font-family: $cv-font-bold;
   font-weight: 700;
   margin-bottom: 0.5em;
-  border-bottom: 1px solid #B6B6B6; }
+  border-bottom: 1px solid $divider-color;
+}
 
 .link-list {
-  padding: 0; }
+  padding: 0;
+}
 
 .link-item {
-  display: inline; }
+  display: inline;
+}
 
 .list-inline {
-  color: #727272; }
+  color: $secondary-text;
+}
 
 .cv-group > h2 {
   margin-bottom: 40px;
   margin-top: 40px;
   border-bottom: 4px solid;
-  font-variant: small-caps; }
-
-/*# sourceMappingURL=style.css.map */
+  font-variant: small-caps;
+}
