--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ a:hover {
   border-top: 10px solid #212121;
   font-family: "Source Sans Pro", sans-serif;
   height: 100vh;
-  background-color: #CFD8DC;
+  background-color: #e7eaea;
   font-size: 16pt; }
 
 .canvas-container {
