--- a/css/style.sass
+++ b/css/style.sass
@@ -11,7 +11,7 @@ $canvas-max-width: 520px
 
 $dark-primary-color: #455A64
 $primary-color: #607D8B
-$light-primary-color: #CFD8DC
+$light-primary-color: #e7eaea
 $text-icons: #FFFFFF
 
 $accent-color: #FF5722
