--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700);
 /* Styles */
 body {
@@ -71,8 +72,8 @@ b, strong, .bold {
 
 /* Selections */
 ::selection {
-  color: #FFFFFF;
-  background-color: #FF5722; }
+  color: white;
+  background-color: #607D8B; }
 
 /* CV */
 .cv > h1 {
@@ -132,22 +133,12 @@ b, strong, .bold {
   line-height: 17px;
   padding-top: 10px; }
 
-.cv-item .recommendation-item {
-  position: relative;
-  line-height: 26px; }
+.recommendations li::before {
+  content: "»";
+  padding-right: 5px; }
 
-.cv-item .recommendation-item::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  right: 100%;
-  display: block;
-  width: 6px;
-  height: 6px;
-  border: 1px solid #727272;
-  border-radius: 50%;
-  margin-top: -3px;
-  margin-right: 12px; }
+.recommendations ul {
+  padding-left: 10px; }
 
 /* Extra desktop settings */
 @media screen and (min-width: 500px) {
