added reference section

--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ b, strong, .bold {
   content: "»";
   padding-right: 5px; }
 
-.recommendations ul {
+.recommendations {
   padding-left: 10px; }
 
 /* List items */
