--- a/css/style.sass
+++ b/css/style.sass
@@ -169,7 +169,7 @@ b, strong, .bold
     content: '\0BB'
     padding-right: 5px
 
-.recommendations ul
+.recommendations
     padding-left: 10px
 
 /* List items */
