gulp tasks (autoreload, minify and more)

--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,19 @@ body {
   text-rendering: optimizeLegibility;
   font-kerning: normal;
   font-family: "Apercu Regular", Calibri, sans-serif;
-  font-size-adjust: 0.5; }
+  font-size-adjust: 0.5;
+}
 
 ul {
   list-style: none;
-  margin: 0; }
+  margin: 0;
+}
 
 img {
   width: 100%;
   height: auto;
-  display: block; }
+  display: block;
+}
 
 a {
   text-decoration: none;
@@ -24,15 +27,18 @@ a {
   -webkit-transition: 0.25s ease-out;
   -moz-transition: 0.25s ease-out;
   -o-transition: 0.25s ease-out;
-  color: #212121; }
+  color: #212121;
+}
 
 a:hover {
   color: #253334 !important;
   border-bottom: 1px dotted #FF5722;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .cv-group a {
-  color: #727272; }
+  color: #727272;
+}
 
 /* Top canvas */
 .canvas {
@@ -40,7 +46,8 @@ a:hover {
   font-family: "Source Sans Pro", sans-serif;
   height: 100vh;
   background-color: #e7eaea;
-  font-size: 16pt; }
+  font-size: 16pt;
+}
 
 .canvas-container {
   margin: auto;
@@ -51,30 +58,37 @@ a:hover {
   right: 0;
   width: 60%;
   height: 50%;
-  max-width: 520px; }
+  max-width: 520px;
+}
 
 b, strong, .bold {
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 .normal {
-  font-weight: 400; }
+  font-weight: 400;
+}
 
 .light {
-  font-weight: 200; }
+  font-weight: 200;
+}
 
 .about p {
-  padding-bottom: 50px; }
+  padding-bottom: 50px;
+}
 
 .footer {
   padding-top: 15px;
   color: black;
   font-size: 12pt;
-  text-align: right; }
+  text-align: right;
+}
 
 /* Selections */
 ::selection {
   color: white;
-  background-color: #607D8B; }
+  background-color: #607D8B;
+}
 
 /* CV */
 .cv > h1 {
@@ -82,104 +96,126 @@ b, strong, .bold {
   text-align: center;
   color: #212121;
   padding: 30px;
-  font-weight: normal; }
+  font-weight: normal;
+}
 
 .cv {
   color: #212121;
-  padding-bottom: 100px; }
+  padding-bottom: 100px;
+}
 
 .cv-group {
   margin: 0 auto;
-  max-width: 700px; }
+  max-width: 700px;
+}
 
 .cv-group > h2 {
   margin-bottom: 40px;
   margin-top: 40px;
   border-bottom: 4px solid;
-  font-variant: small-caps; }
+  font-variant: small-caps;
+}
 
 .cv-item {
   position: relative;
   max-width: 700px;
   border-bottom: 1px solid #B6B6B6;
   margin: 0 auto 30px;
-  padding: 0 0 20px; }
+  padding: 0 0 20px;
+}
 
 .cv-item header {
   min-height: 60px;
   padding-left: 95px;
-  text-align: center; }
+  text-align: center;
+}
 
 .cv-item img {
   position: absolute;
   top: 0;
   left: 0;
-  width: 60px; }
+  width: 60px;
+}
 
 .cv-item h1 {
   font-family: "Apercu Bold", Calibri, sans-serif;
   font-size: 15px;
   font-weight: 700;
   color: #212121;
-  display: inline; }
+  display: inline;
+}
 
 .cv-item .description {
   display: block;
   color: #727272;
   padding-left: 10px;
-  font-size: 10px; }
+  font-size: 10px;
+}
 
 .cv-item .duration {
   display: block;
   font-size: 12px;
-  color: #727272; }
+  color: #727272;
+}
 
 .cv-item .content {
   font-size: 14px;
   color: #727272;
   line-height: 17px;
-  padding-top: 10px; }
+  padding-top: 10px;
+}
 
 .recommendations li::before {
   content: "»";
-  padding-right: 5px; }
+  padding-right: 5px;
+}
 
 .recommendations {
-  padding-left: 10px; }
+  padding-left: 10px;
+}
 
 /* List items */
 .list-description {
   font-family: "Apercu Bold", Calibri, sans-serif;
   font-weight: 700;
   margin-bottom: 0.5em;
-  border-bottom: 1px solid #B6B6B6; }
+  border-bottom: 1px solid #B6B6B6;
+}
 
-.link-list {
-  padding: 0; }
+.inline-list {
+  padding: 0;
+  color: #727272;
+}
 
-.link-item {
-  display: inline; }
+.inline-list li {
+  display: inline;
+}
 
-.list-inline {
-  color: #727272; }
+.inline-list li + li:before {
+  content: " / ";
+}
 
 /* Extra desktop settings */
 @media screen and (min-width: 500px) {
   .cv-item {
-    padding-right: 0; }
+    padding-right: 0;
+  }
 
   .cv-item header {
     text-align: left;
     padding-left: 80px;
-    min-height: 0; }
+    min-height: 0;
+  }
 
   .cv-item .description {
-    display: inline-block; }
+    display: inline-block;
+  }
 
   .cv-item .duration {
-    float: right; }
+    float: right;
+  }
 
   .cv-item .content {
-    padding-left: 80px; } }
-
-/*# sourceMappingURL=style.css.map */
+    padding-left: 80px;
+  }
+}
