--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,3 @@
-/* Move most to svelte files */
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700);
 
 html,
@@ -8,7 +7,6 @@ body {
   height: 100%;
 }
 
-/* Styles */
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -16,4 +14,26 @@ body {
   font-kerning: normal;
   font-family: "Apercu Regular", Calibri, sans-serif;
   font-size-adjust: 0.5;
+}
+
+a {
+  text-decoration: none;
+  border-bottom: 1px dotted;
+  transition: 0.25s ease-out;
+  -webkit-transition: 0.25s ease-out;
+  -moz-transition: 0.25s ease-out;
+  -o-transition: 0.25s ease-out;
+  color: #212121;
+}
+
+a:hover {
+  color: #253334 !important;
+  border-bottom: 1px dotted #ff5722;
+  text-decoration: none;
+}
+
+/* Text selections */
+::selection {
+  color: white;
+  background-color: #607d8b;
 }
