fix: dont purge styles in svelte files

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700);
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 html,
 body {
   position: relative;
