--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 html,
 body {
   position: relative;
@@ -19,6 +18,7 @@ body {
   font-kerning: normal;
   font-family: "Apercu Regular", Calibri, sans-serif;
   font-size-adjust: 0.5;
+  background-color: #f5f5f5;
 }
 
 a {
